<resources>
    <string name="app_name">Spanish Number</string>
    <string name="one">one</string>
    <string name="two">two</string>
    <string name="three">three</string>
    <string name="five">five</string>
    <string name="seven">seven</string>
    <string name="nine">nine</string>
    <string name="four">four</string>
    <string name="six">six</string>
    <string name="eight">eight</string>
    <string name="ten">ten</string>
</resources>
