<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/ccc">

    <Button
        android:textColor="#ffffff"
        android:background="@drawable/button"
        android:id="@+id/one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="57dp"
        android:layout_marginTop="45dp"
        android:text="@string/one" />

    <Button
        android:textColor="#ffffff"
        android:background="@drawable/button"
        android:id="@+id/two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/one"
        android:layout_marginEnd="70dp"
        android:text="@string/two" />

    <Button
        android:textColor="#ffffff"
        android:background="@drawable/button"
        android:id="@+id/three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/one"
        android:layout_marginTop="142dp"
        android:text="@string/three" />

    <Button
        android:textColor="#ffffff"
        android:background="@drawable/button"
        android:id="@+id/five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/one"
        android:layout_marginTop="237dp"
        android:text="@string/five" />

    <Button
        android:textColor="#ffffff"
        android:background="@drawable/button"
        android:id="@+id/seven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/one"
        android:layout_alignTop="@+id/eight"
        android:text="@string/seven" />

    <Button
        android:textColor="#ffffff"
        android:background="@drawable/button"
        android:id="@+id/nine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/one"
        android:layout_marginBottom="76dp"
        android:text="@string/nine" />

    <Button
        android:textColor="#ffffff"
        android:background="@drawable/button"
        android:id="@+id/four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/two"
        android:layout_alignTop="@+id/three"
        android:text="@string/four" />

    <Button
        android:textColor="#ffffff"
        android:background="@drawable/button"
        android:id="@+id/six"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/two"
        android:layout_alignTop="@+id/five"
        android:text="@string/six" />

    <Button
        android:textColor="#ffffff"
        android:background="@drawable/button"
        android:id="@+id/eight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/two"
        android:layout_marginBottom="175dp"
        android:text="@string/eight" />

    <Button
        android:textColor="#ffffff"
        android:background="@drawable/button"
        android:id="@+id/ten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/two"
        android:layout_alignTop="@+id/nine"
        android:text="@string/ten" />
</RelativeLayout>